testdata/de/dm/intellij/bndtools/parser/BndHeaderParsersTest/testExportPackageHighlighting/bnd.bnd
Export-Package: de.dm;uses:="<error descr="Cannot resolve package de.dm.non.existing">de.dm.non.existing</error>"
